plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/multiModulesHmpp/top-mpp/src/linuxMain/kotlin/transitiveStory/bottomActual/mppBeginning/MPOuter.kt
package transitiveStory.bottomActual.mppBeginning

actual open class <!LINE_MARKER("descr='Has declaration in common module'")!>MPOuter<!> {
    protected actual open val <!LINE_MARKER("descr='Has declaration in common module'")!>b<!>: Int = 65
    internal actual val <!LINE_MARKER("descr='Has declaration in common module'")!>c<!>: Int = 235
    actual val <!LINE_MARKER("descr='Has declaration in common module'")!>d<!>: Int = 235

     protected actual class <!LINE_MARKER("descr='Has declaration in common module'")!>MPNested<!> {
        actual val <!LINE_MARKER("descr='Has declaration in common module'")!>e<!>: Int = 2452
    }
}